# mimir-coordinator-k8s-operator

./: .gitignore  .wokeignore  CODEOWNERS  Makefile  README.md  SECURITY.md  charmcraft.yaml  config.yaml  justfile  metadata.yaml  pyproject.toml  requirements.txt  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: issues.yaml  issues.yml  pull-request.yaml
lib/charms/mimir_coordinator_k8s/v0/: mimir_cluster.py  prometheus_api.py
lib/charms/tempo_k8s/v1/: charm_tracing.py
src/: agent_config.py  agent_workload.py  charm.py  mimir_cluster.py  mimir_config.py  mimir_coordinator.py  nginx.py  nginx_config.py  nginx_prometheus_exporter.py  otlp.py  schema.py  workload.py
src/grafana_dashboards/: mimir-alertmanager.json  mimir-compactor.json  mimir-config.json  mimir-object-store.json  mimir-overrides.json  mimir-overview-networking.json  mimir-overview.json  mimir-queries.json  mimir-ruler.json  mimir-top-tenants.json
src/loki_alert_rules/: log_volume.yaml
src/loki_alert_rules/consolidated_rules/: consolidated_worker.rules
src/prometheus_alert_rules/: alerts.yaml  rules.yaml
src/prometheus_alert_rules/consolidated_rules/: rendered_worker.rules
src/prometheus_alert_rules/mimir_workers/: rules.yaml
src/prometheus_alert_rules/nginx/: knyar-nginx-exporter.yml
src/prometheus_alert_rules/workers/: alerts.yaml
terraform/: README.md  main.tf  outputs.tf  terraform.tfstate  variables.tf  versions.tf
tests/integration/: conftest.py  helpers.py  remote_pb2.py  test_charm.py  test_charm_ha.py  test_charm_ha_scaled.py  test_charm_ha_simple.py  test_charm_monolithic.py  test_exemplars.py  test_self_monitoring.py  test_service_mesh.py  test_tls.py  types_pb2.py
tests/integration/gogoproto/: gogo_pb2.py
tests/interface/: conftest.py  test_mimir_cluster.py
tests/scenario/: conftest.py  helpers.py  test_charm_statuses.py  test_coherence.py  test_datasources.py  test_mimir_cluster_interface.py  test_prometheus_api_implementation.py  test_prometheus_api_lib.py
tests/spread/: conftest.py  helpers.py
tests/spread/task_ha_scaled/: task.yaml  test_charm_ha.py
tests/spread/task_one/: task.yaml  test.sh
tests/spread/task_two/: task.yaml  test.sh
tests/spread/test_ha/: task.yaml  test_charm_ha.py
tests/spread/test_monolithic/: task.yaml
tests/unit/: conftest.py  helpers.py  test_charm.py  test_coherence.py  test_config.py  test_datasources.py  test_mimir_config.py  test_nginx_config.py  test_prometheus_api_implementation.py  test_prometheus_api_lib.py  test_telemetry_correlation.py  test_tls.py
