[project]
name = "mimir-coordinator-k8s"
version = "0.0"                # this is in fact irrelevant
requires-python = "==3.10.*"   # https://packages.ubuntu.com/jammy/python3

dependencies = [
  "ops",
  # crossplane is a package from nginxinc to interact with the Nginx config
  "crossplane",

  # ---PYDEPS---
  "cosl>=0.0.55",
  "pydantic>=2",
  # lib/charms/tempo_k8s/v1/charm_tracing.py
  "opentelemetry-exporter-otlp-proto-http==1.21.0",
  # lib/charms/tls_certificates_interface/v3/tls_certificates.py
  "jsonschema",
  "cryptography",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright==1.1.344",
  # Unit
  "pytest",
  "coverage[toml]",
  "deepdiff",
  "cosl>=0.0.55",
  # Integration
  "minio",
  "tenacity",
  "juju",
  "pytest-operator",
  # scenario
  "ops[testing]>=2.17",
  # interface
  "pytest-interface-tester>2.0.0",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
log_cli_level = "INFO"
markers = ['setup: marks tests as setup (deselect with -m "not setup")']

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["src"]
extraPaths = ["lib"]
pythonPlatform = "Linux"
reportUnknownParameterType = true

[tool.codespell]
skip = ".git,build,.venv"
ignore-words-list = "assertIn,aNULL"
