# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "mimir-coordinator-k8s"
version = "0.0"
requires-python = "~=3.10"   # https://packages.ubuntu.com/jammy/python3

dependencies = [
  "ops",
  "cosl>=1.0",
  "coordinated-workers",
  "pydantic>=2",
  # tracing
  "opentelemetry-exporter-otlp-proto-http==1.35.0",
  "opentelemetry-sdk==1.35.0",
]

[project.optional-dependencies]
dev = [
  # Linting
  "ruff",
  "codespell",
  # Static
  "pyright",
  # Unit
  "pytest",
  "coverage[toml]",
  "deepdiff",
  # Integration
  "minio",
  "tenacity",
  "juju",
  "pytest-operator",
  # scenario
  "ops[testing]>=2.17",
  # interface
  "pytest-interface-tester>2.0.0",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
log_cli_level = "INFO"
markers = ['setup: marks tests as setup (deselect with -m "not setup")']
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
extraPaths = ["src", "lib"]
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.codespell]
skip = ".git,.tox,build,venv*"
ignore-words-list = "assertIn,aNULL"
